[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
##Rocket crate
rocket = { version = "0.5.0",features = ["json"] }
##序列化与反序列化crate,添加“derive”使其#[derive(Serialize,Deserialize)]可用
serde = { version = "1.0.130", features = ["derive"]}
##静态变量初始化crate
lazy_static = { version = "1.4.0"}
##连接MSSQL数据库包
mssql = {path = "mssql"}
