[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
##Rocket crate
rocket = { version = "0.5.0",features = ["json"] }
##Tera模板
tera = { version = "1" }
##序列化与反序列化crate,添加“derive”使其#[derive(Serialize,Deserialize)]可用
serde = { version = "1.0.130", features = ["derive"]}
serde_json = { version = "1.0.116"}
##静态变量初始化crate
lazy_static = { version = "1.4.0"}
##连接MSSQL数据库包
mssql = {path = "mssql"}
##事件驱动包
eventful = {path = "eventful"}
##tokio crate async runtime
tokio = {version = "1.37.0",features = ["full"]}
##hash转换
rust-crypto = {version = "0.2.36"}
##random number
rand =  "0.8" 
##UUID crate 
uuid = { version = "1", features = ["v4"] } 
##跟踪日志
tracing-subscriber = "0.3.16"
tracing = "0.1.37"


[profile.release]
opt-level = 3